--- a/worksheets/ws_lab01.Rmd
+++ b/worksheets/ws_lab01.Rmd
@@ -180,7 +180,7 @@ titanic %>%
 
 ------
 
-## Bar charts
+## Contingency tables
 
 You may have heard that, when trying to evacuate the *Titanic*, there was a rule to put "women and children first" onto lifeboats.  This suggests a **hypothesis**:  *If* this rule was actually followed, *then* female passengers should have a higher survival rate than male passengers.
 
@@ -194,7 +194,37 @@ titanic %>%
 
 Now each row of the table tells us the number of passengers (in column `n`) that fall into categories defined by the *combination* of `sex` and `survived`.  So the first row is the number of female passengers who did not survive, the second row is the number of female passengers who did survive, etc.
 
-The table we just made contains all the information we need to test the hypothesis about whether women in fact survived at a higher rate than men.  However, it is hard to compare male and female survival rates because there were different numbers of male and female passengers.  This is a case where a visual summary would make it easier to compare the survival rate of male and female passengers.
+When we make a frequency table that is grouped by two categorical variables, we often re-organize the table in a particular form called a **contingency table**.  The following chunk of code turns the table we just made into a contingency table:
+
+```{r}
+titanic %>%
+  group_by(sex, survived) %>%
+  summarize(n = n()) %>%
+  spread(survived, n)
+```
+
+Notice that we added a new line at the end.  This line tells R to `spread` out the `n` column from a single column into multiple columns, where each column now gives counts of the number of passengers who did or did not survive and each row corresponds to the sex of the passengers.
+
+------
+
+### Exercise 4
+
+Fill in the blank in the chunk below so that, when you run it, you get a contingency table where each row corresponds to the `class` of the passengers instead of their `sex`.  Based on the result, which class would you want to be if you wanted to survive the *Titanic* disaster?
+
+```{r error = TRUE}
+titanic %>%
+  group_by(___, survived) %>%
+  summarize(n = n()) %>%
+  spread(survived, n)
+```
+
+**PROVIDE YOUR WRITTEN RESPONSE HERE**
+
+------
+
+## Bar charts
+
+The tables we just made contain all the information we need to test the hypothesis about whether women in fact survived at a higher rate than men.  However, it is hard to compare male and female survival rates because there were different numbers of male and female passengers.  A visual summary would make it easier to compare the survival rate of male and female passengers.
 
 Run the chunk of code below to tell R make a visual summary of the number of male and female survivors.  The result is what we call a **dodged bar plot**.
 
@@ -213,7 +243,7 @@ Pretty neat!  The height of each bar corresponds to the number of passengers of 
 
 ------
 
-### Exercise 4
+### Exercise 5
 
 Try running the following chunks of code.  Each of them are different ways to make a bar chart of the number of male and female passengers who did or did not survive.  After running each one, provide your response to the question below.
 
@@ -297,7 +327,7 @@ titanic %>%
 
 ------
 
-### Exercise 5
+### Exercise 6
 
 Use the chunk below to try making several different histograms of passenger age split by survival, using different bin widths of your own choice.  Each time, just put in a new number after `binwidth = ` and hit the green "Run" arrow on the upper right of the chunk to re-run the code and make a new graph.
 
@@ -313,11 +343,3 @@ titanic %>%
 **PROVIDE YOUR WRITTEN RESPONSE HERE**
 
 ------
-
-## Wrap-up
-
-Today we began our adventure by using RStudio to explore some data.  We saw how to look at data and how to summarize it in various helpful ways.  These were frequency tables, proportions, bar charts, and histograms.
-
-* Frequency tables count the number of times a particular value of a particular variable (or combination of values across multiple variables) occurs in our dataset.
-* Bar charts display counts of categorical variables in a visual form that makes it easier to compare them.
-* Histograms let us visually summarize counts of numerical variables by putting them in "bins", the width of which we need to decide.
